--- a/Anderson_Nuñez_Lugo/ciclo4UnabHotel/angular.json
+++ b/Anderson_Nuñez_Lugo/ciclo4UnabHotel/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2a91ca49-de19-43dc-b89b-5c69eee03273"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
